Change font colour homepage text

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,6 +53,12 @@ body {
     color: #000 !important;
 }
 
+.text-white {
+    color: #fff !important;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
 .border-black {
     border: 1px solid black !important;
 }
