--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,6 +49,10 @@ body {
     color: white;
 }
 
+.logo-font {
+    text-transform: uppercase;
+}
+
 .text-black {
     color: #000 !important;
 }
@@ -61,6 +65,14 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
+}
+
+#display {
+    margin-top: 50%;
 }
 
 /* -------------------------------- Media Queries */
