--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,6 +51,8 @@ body {
 
 .logo-font {
     text-transform: uppercase;
+    margin-top: 3%;
+    font-weight: 700;
 }
 
 .text-black {
@@ -73,6 +75,16 @@ body {
 
 #display {
     margin-top: 50%;
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 /* -------------------------------- Media Queries */
