--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div><div class="overlay"></div>
+    <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
@@ -25,16 +25,16 @@
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                                 <div class="card h-100 border-0">
                                     {% if book.image %}
-                                    <a href="">
-                                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.name }}">
+                                    <a href="{% url 'book_detail' book.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
                                     </a>
                                     {% else %}
-                                    <a href="">
-                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.name }}">
+                                    <a href="{% url 'book_detail' book.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
                                     </a>
                                     {% endif %}
                                     <div class="card-body pb-0">
-                                        <p class="mb-0">{{ book.name }}</p>
+                                        <p class="mb-0">{{ book.title }}</p>
                                     </div>
                                     <div class="card-footer bg-white pt-0 border-0 text-left">
                                         <div class="row">
