--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -29,6 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="book-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ book.title }}</p>
+                    <p><strong>Format:</strong> {{ book.get_format_display }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ book.price }}</p>
                     {% if book.category %}
                     <p class="small mt-1 mb-0">
