--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -65,6 +65,7 @@
                             {% endif %}
                             <div class="card-body pb-0">
                                 <p class="mb-0">{{ book.title }}</p>
+                                <p class="mb-0"><strong>Format:</strong> {{ book.get_format_display }}</p>
                             </div>
                             <div class="card-footer bg-white pt-0 border-0 text-left">
                                 <div class="row">
