--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -30,7 +30,7 @@
                 <div class="book-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ book.title }}</p>
                     <p><strong>Format:</strong> {{ book.get_format_display }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ book.price }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold">£{{ book.price }}</p>
                     {% if book.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'books' %}?category={{ book.category.name }}">
