--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="{% url 'books' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
                 <a href="{% url 'books' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
                 <a href="{% url 'books' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
-                <a href="{% url 'books' %}" class="dropdown-item">All Products</a>
+                <a href="{% url 'books' %}" class="dropdown-item">All Books</a>
             </div>
         </li>
 
