--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -39,7 +39,13 @@
                             {% for item in bag_items %}
                                 <tr>
                                     <td class="p-3 w-25">
-                                        <img class="img-fluid rounded" src="{{ item.book.image.url }}">
+                                        <a href="{% url 'book_detail' item.book.id %}">
+                                            {% if item.book.image %}
+                                                <img class="img-fluid rounded" src="{{ item.book.image.url }}" alt="{{ item.book.title }}">
+                                            {% else %}
+                                                <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.book.title }}">
+                                            {% endif %}
+                                        </a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.book.title }}</strong></p>
