--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -20,10 +20,14 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img class="w-100" src="{{ item.book.image.url }}" alt="{{ item.book.name }}">
+                            {% if item.book.image %}
+                            <img class="w-100" src="{{ item.book.image.url }}" alt="{{ item.book.title }}">
+                            {% else %}
+                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.book.title }}">
+                            {% endif %}
                         </div>
                         <div class="col-9">
-                            <p class="my-0"><strong>{{ item.book.name }}</strong></p>
+                            <p class="my-0"><strong>{{ item.book.title }}</strong></p>
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                     </div>
@@ -34,12 +38,12 @@
                     <strong>
                         <p class="mt-3 mb-1 text-black">
                             Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
-                            <span class="float-right">${{ total|floatformat:2 }}</span>
+                            <span class="float-right">£{{ total|floatformat:2 }}</span>
                         </p>
                     </strong>
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
-                            Spend <strong>${{ free_delivery_delta }}</strong> more to get free next day delivery!
+                            Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
                     <a href="{% url 'view_bag' %}" class="btn btn-style btn-block rounded-0">
