--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -43,6 +43,12 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_book' book.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_book' book.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     <p class="mt-3">{{ book.description }}</p>
                     <form class="form" action="{% url 'add_to_bag' book.id %}" method="POST">
                         {% csrf_token %}
