--- a/books/templates/books/add_category.html
+++ b/books/templates/books/add_category.html
@@ -1,12 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
-{% endblock %}
-
-
-
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -21,7 +15,7 @@
     <div class="row">
         <div class="col-12 col-md-6">
             <hr>
-            <h2 class="logo-font mb-4">Book Managment</h2>
+            <h2 class="logo-font mb-4">Category Management</h2>
             <h5 class="text-muted">Add a Category</h5>
             <hr>
         </div>
@@ -31,16 +25,43 @@
         <div class="col-12 col-md-6">
             <form action="{% url 'add_category' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form|crispy}}
+                {{ form|crispy }}
                 <div class="text-right">
-                    <a href="{% url 'admin_profile' %}" class="btn logo-font btn-style rounded">Cancel</a>
+                    <a href="" class="btn logo-font btn-style rounded">Cancel</a>
                     <button class="btn logo-font btn-style rounded" type="submit">Add Category</button>
                 </div>
             </form>
-
+        </div>
+        <div class="col-12 col-lg-6">
+            <div class="category-table table-responsive mb-5">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr class="border-bottom">
+                            <th>Name</th>
+                            <th>Friendly Name</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for category in categories %}
+                        <tr>
+                            <td>{{ category.name }}</td>
+                            <td>{{ category.friendly_name }}</td>
+                            <td>
+                                <div class="btn logo-font d-inline">
+                                    <a href="{% url 'edit_category' category.id %}" class="text-success">Edit</a>
+                                    <button class="btn logo-font text-danger" data-toggle="modal"
+                                        data-target="#deleteModal{{ category.id }}">Delete</button>
+                                </div>
+                                <!-- Modal -->
+                                {% include 'books/includes/delete_category_modal.html' %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
-
-
 {% endblock %}
