--- a/profiles/templates/profiles/book_managment.html
+++ b/profiles/templates/profiles/book_managment.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
 
+
+
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-            <!-- Optionally add content here if needed -->
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col text-center">
             <hr>
-            <h2 class="logo-font mb-4">Book Management</h2>
+            <h2 class="logo-font mb-4">Book Managment</h2>
             <hr>
         </div>
     </div>
@@ -36,7 +36,8 @@
                     Add Category
                 </div>
             </a>
-            <p class="mt-2">Add new Category</p>
+            <p class="mt-2"> Add new Category</p>
+
         </div>
     </div>
     <div class="row mt-5">
@@ -47,8 +48,13 @@
                     Add Book
                 </div>
             </a>
-            <p class="mt-2">Add new Book</p>
+            <p class="mt-2"> Add new Book</p>
+
         </div>
     </div>
 </div>
+
+</div>
+
+
 {% endblock %}
