--- a/books/templates/books/add_category.html
+++ b/books/templates/books/add_category.html
@@ -12,12 +12,10 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+    <h2 class="logo-font text-center mb-3 mt-5">Category Management</h2>
     <div class="row">
         <div class="col-12 col-md-6">
-            <hr>
-            <h2 class="logo-font mb-4">Category Management</h2>
-            <h5 class="text-muted">Add a Category</h5>
-            <hr>
+            <h4 class="text-muted mb-4">Add a Category</h4>
         </div>
     </div>
 
@@ -34,7 +32,7 @@
         </div>
         <div class="col-12 col-lg-6">
             <div class="category-table table-responsive mb-5">
-                <table class="table table-sm table-borderless">
+                <table class="table table-sm">
                     <thead>
                         <tr class="border-bottom">
                             <th>Name</th>
@@ -49,9 +47,9 @@
                             <td>{{ category.friendly_name }}</td>
                             <td>
                                 <div class="btn logo-font d-inline">
-                                    <a href="{% url 'edit_category' category.id %}" class="text-success">Edit</a>
+                                    <a href="{% url 'edit_category' category.id %}" class="text-success"><i class="fas fa-edit"></i> Edit</a>
                                     <button class="btn logo-font text-danger" data-toggle="modal"
-                                        data-target="#deleteModal{{ category.id }}">Delete</button>
+                                    data-target="#deleteModal{{ category.id }}"><i class="fas fa-trash-alt"></i> Delete</button>
                                 </div>
                                 <!-- Modal -->
                                 {% include 'books/includes/delete_category_modal.html' %}
