--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,11 @@
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
+    <script>
+        $(window).on('load', function () {
+            $('#myModal').modal('show');
+        });
+    </script>
     {% endblock %}
 
     
