Add style to login and signup template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,6 +83,10 @@ body {
     margin-top: 50%;
 }
 
+hr {
+    margin-bottom: 3rem;
+}
+
 .overlay {
 	height: 100%;
 	width: 100%;
@@ -343,10 +347,6 @@ input[name='q']::placeholder {
         font-size: .9rem;
     }
 
-    .btn.btn-outline-black.rounded-0,
-    .btn.btn-black.rounded-0 {
-        padding: .375rem .375rem;
-    }
 
     .btn.btn-outline-black.rounded-0.btn-lg,
     .btn.btn-black.rounded-0.btn-lg {
