--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -14,13 +14,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Books</h2>
-                {% for category in categories %}
-                    <a class="category-badge text-decoration-none" href="{% url 'books' %}?category={{ category.name }}">
-                        <span class="p-2 badge badge-white text-black rounded-0 border border-dark">{{ category.friendly_name }}</span>
-                    </a>
-                {% endfor %}
-                <hr class="w-50 mb-1">
+                {% if current_categories %}
+                    <h1>Books in {% for category in current_categories %}{{ category.name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h1>
+                {% else %}
+                    <h1>Books</h1>
+                {% endif %}
             </div>
         </div>
         <div class="row">
