--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,8 +8,7 @@
 {% block inner_content %}
 
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign In" %}</h2>
-<hr>
+<h2 class="logo-font mb-4 text-center">{% trans "Sign In" %}</h2>
 
 {% get_providers as socialaccount_providers %}
 
@@ -45,9 +44,6 @@
   {% endif %}
   <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-  <p class="mt-2">
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  </p>
 </form>
 
 {% endblock %}
