--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,8 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
+<h2 class="logo-font text-center mb-4">{% trans "Sign Up" %}</h2>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
