--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -43,6 +43,9 @@
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
+                    {% if request.user.is_authenticated %}
+                        <a href="{% url 'add_to_wishlist' book.id %}" class="btn btn-primary mt-3">Add to Wishlist</a>
+                    {% endif %}
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
                             <a href="{% url 'edit_book' book.id %}">Edit</a> | 
