Add changes to templates and typos

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -368,3 +368,7 @@ div.img-thumbnail.wishlist-img {
 tr.border-bottom {
     text-align: left;
 }
+
+a.btn.btn-primary.mt-3 {
+    margin-left: 4%;
+}
