--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="book-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ book.title }}</p>
+                    <h2 class="mb-0">{{ book.title }}</h2>
                     <p><strong>Format:</strong> {{ book.get_format_display }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">£{{ book.price }}</p>
                     {% if book.category %}
