--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -15,10 +15,11 @@
         <div class="row">
             <div class="col text-center mt-3">
                 {% if current_categories %}
+                    <hr>
                     <h1>Books in {% for category in current_categories %}{{ category.friendly_name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h1>
                 {% else %}
                     <hr>
-                    <h1>Books</h1>
+                    <h1>All Books</h1>
                 {% endif %}
             </div>
         </div>
