--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Books
+                Books
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-books-link">
                 <a href="{% url 'books' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
