--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -49,7 +49,7 @@
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
                             <a href="{% url 'edit_book' book.id %}">Edit</a> | 
-                            <a class="text-danger" href="{% url 'delete_book' book.id %}">Delete</a>
+                            <a class="text-danger" href="#" data-toggle="modal" data-target="#deleteModal">Delete</a>
                         </small>
                     {% endif %}
                     <p class="mt-3">{{ book.description }}</p>
@@ -95,6 +95,30 @@
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this book?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <form method="POST" action="{% url 'delete_book' book.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
                 </div>
             </div>
