--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -16,13 +16,9 @@
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if book.image %}
-                        <a href="{% url 'book_detail' book.id %}">
-                            <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
-                        </a>
+                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
                     {% else %}
-                        <a href="{% url 'book_detail' book.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
-                        </a>
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
                     {% endif %}
                 </div>
             </div>
@@ -100,6 +96,36 @@
             </div>
         </div>
     </div>
+    <div class="container">
+    <div class="row mt-5">
+        <div class="col-12">
+            <h3>Reviews</h3>
+            {% for review in reviews %}
+                <div class="review">
+                    <h4>{{ review.title }}</h4>
+                    <p>{{ review.content }}</p>
+                    <p><strong>Rating:</strong> {{ review.rating }} / 5</p>
+                    <p><strong>Reviewed by:</strong> {{ review.user.username }} on {{ review.created_at }}</p>
+                    {% if review.user == request.user %}
+                        <a href="{% url 'edit_review' review.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                        <a href="{% url 'delete_review' review.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    {% endif %}
+                </div>
+                <hr>
+            {% endfor %}
+    
+            {% if request.user.is_authenticated %}
+                <h3>Leave a Review</h3>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            {% else %}
+                <p>You need to <a href="{% url 'login' %}">log in</a> to leave a review.</p>
+            {% endif %}
+        </div>
+    </div>
 
     <!-- Delete Confirmation Modal -->
     <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -123,6 +149,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
 
