--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -122,7 +122,7 @@
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             {% else %}
-                <p>You need to <a href="{% url 'login' %}">log in</a> to leave a review.</p>
+                <p>You need to <a href="{% url 'account_login' %}">log in</a> to leave a review.</p>
             {% endif %}
         </div>
     </div>
