--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -49,107 +49,112 @@
                         </small>
                     {% endif %}
                     <p class="mt-3">{{ book.description }}</p>
-                    <form class="form" action="{% url 'add_to_bag' book.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-color rounded mr-1"
-                                                data-item_id="{{ book.id }}" id="decrement-qty_{{ book.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ book.id }}"
-                                            id="id_qty_{{ book.id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ book.id }}" id="increment-qty_{{ book.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
+                    
+                    {% if request.user.is_authenticated %}
+                        <form class="form" action="{% url 'add_to_bag' book.id %}" method="POST">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <div class="form-group w-50">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-color rounded mr-1"
+                                                    data-item_id="{{ book.id }}" id="decrement-qty_{{ book.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control qty_input" type="number"
+                                                name="quantity" value="1" min="1" max="99"
+                                                data-item_id="{{ book.id }}"
+                                                id="id_qty_{{ book.id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-black rounded-0"
+                                                    data-item_id="{{ book.id }}" id="increment-qty_{{ book.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="col-12">
-                                <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <div class="col-12">
+                                    <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                </div>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                        </div>
-                    </form>
+                        </form>
+                    {% else %}
+                        <p class="mt-3">Please <a href="{% url 'account_login' %}">log in</a> to add items to your bag.</p>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
     <div class="container">
-    <div class="row mt-5">
-        <div class="col-12">
-            <h3>Reviews</h3>
-            {% for review in reviews %}
-                <div class="review">
-                    <h4>{{ review.title }}</h4>
-                    <p>{{ review.content }}</p>
-                    <p><strong>Rating:</strong> {{ review.rating }} / 5</p>
-                    <p><strong>Reviewed by:</strong> {{ review.user.username }} on {{ review.created_at }}</p>
-                    {% if review.user == request.user %}
-                        <a href="{% url 'edit_review' review.id %}" class="btn btn-secondary btn-sm">Edit</a>
-                        <a href="{% url 'delete_review' review.id %}" class="btn btn-danger btn-sm">Delete</a>
-                    {% endif %}
-                </div>
-                <hr>
-            {% endfor %}
-    
-            {% if request.user.is_authenticated %}
-                <h3>Leave a Review</h3>
-                <form method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            {% else %}
-                <p>You need to <a href="{% url 'account_login' %}">log in</a> to leave a review.</p>
-            {% endif %}
-        </div>
-    </div>
+        <div class="row mt-5">
+            <div class="col-12">
+                <h3>Reviews</h3>
+                {% for review in reviews %}
+                    <div class="review">
+                        <h4>{{ review.title }}</h4>
+                        <p>{{ review.content }}</p>
+                        <p><strong>Rating:</strong> {{ review.rating }} / 5</p>
+                        <p><strong>Reviewed by:</strong> {{ review.user.username }} on {{ review.created_at }}</p>
+                        {% if review.user == request.user %}
+                            <a href="{% url 'edit_review' review.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                            <a href="{% url 'delete_review' review.id %}" class="btn btn-danger btn-sm">Delete</a>
+                        {% endif %}
+                    </div>
+                    <hr>
+                {% endfor %}
 
-    <!-- Delete Confirmation Modal -->
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete this book?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <form method="POST" action="{% url 'delete_book' book.id %}">
+                {% if request.user.is_authenticated %}
+                    <h3>Leave a Review</h3>
+                    <form method="POST">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
+                {% else %}
+                    <p>You need to <a href="{% url 'account_login' %}">log in</a> to leave a review.</p>
+                {% endif %}
+            </div>
+        </div>
+
+        <!-- Delete Confirmation Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this book?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <form method="POST" action="{% url 'delete_book' book.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 {% endblock %}
 
