--- a/books/templates/books/edit_review.html
+++ b/books/templates/books/edit_review.html
@@ -1,14 +1,33 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-<div class="container">
-    <h2>Edit Review</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save changes</button>
-    </form>
-    <a href="{% url 'book_detail' review.book.id %}" class="btn btn-secondary">Cancel</a>
-</div>
+    <div class="overlay"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-8 col-lg-6 offset-lg-3">
+                <div class="book-details-container mb-5 mt-md-5">
+                    <h2 class="mb-3">Edit Review</h2>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <a href="{% url 'book_detail' review.book.id %}" class="btn btn-secondary">Cancel</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
 {% endblock %}
