--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -103,7 +103,7 @@
     </div>
     <div class="container">
         <div class="row mt-5">
-            <div class="col-12">
+            <div class="col-12 text-center">
                 <h3>Reviews</h3>
                 {% for review in reviews %}
                     <div class="review">
