Add style to heading on templates

--- a/books/templates/books/new_arrivals.html
+++ b/books/templates/books/new_arrivals.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid">
-    <div class="container">
+    <div class="container text-center">
         <hr>
         <h1>New Arrivals</h1>
         <hr>
