Add style to review card

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -106,7 +106,7 @@
             <div class="col-12 text-center">
                 <h3>Reviews</h3>
                 {% for review in reviews %}
-                    <div class="review">
+                    <div class="review-card">
                         <h4>{{ review.title }}</h4>
                         <p>{{ review.content }}</p>
                         <p><strong>Rating:</strong> {{ review.rating }} / 5</p>
