Edit style on templates and btns

--- a/profiles/templates/profiles/book_management.html
+++ b/profiles/templates/profiles/book_management.html
@@ -30,7 +30,7 @@
     <div class="row mt-4">
         <div class="col text-center">
             <a href="{% url 'add_category' %}">
-                <div class="btn logo-font btn-style accounts-btns">
+                <div class="btn-custom">
                     <span><i class="fa-solid fa-list pr-2"></i></span>
                     Add Category
                 </div>
@@ -42,7 +42,7 @@
     <div class="row mt-5">
         <div class="col text-center">
             <a href="{% url 'add_book' %}">
-                <div class="btn logo-font btn-style accounts-btns">
+                <div class="btn-custom">
                     <span><i class="fas fa-book pr-2"></i></span>
                     Add Book
                 </div>
