--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -82,6 +82,11 @@
                 </div>
             </div>
         </div>
+        <div class="row mt-5">
+            <div class="col text-center">
+                <a href="{% url 'view_wishlist' %}" class="btn btn-primary">View My Wishlist</a>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
