--- a/static/css/base.css
+++ b/static/css/base.css
@@ -431,3 +431,19 @@ a.btn.btn-primary.mt-3 {
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+a.btn.btn-primary {
+    background-color: #80bd92;
+    border-color: #80bd92;
+}
+
+.btn-custom {
+    background-color: #ffd710;
+    margin-left: 40%;
+    margin-right: 40%;
+    color: #000;
+    font-family: inherit;
+    text-transform: uppercase;
+    margin-top: 3%;
+    font-weight: 700;
+}
