--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,14 @@
     {% endblock %}
 
     {% block corecss %}
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <!-- favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
     {% endblock %}
 
     {% block extra_css %}
@@ -35,6 +40,7 @@
     {% endblock %}
 
     <title>CookBookNook {% block extra_title %}{% endblock %}</title>
+
   </head>
   <body>
     <header class="container-fluid fixed-top">
