Add margin to books, book_details templates

--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <div class="container container-fluid border">
+    <div class="container container-fluid border mb-5">
         <div class="row mt-5">
             <div class="col-12 text-center">
                 {% if reviews %}
