--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -49,7 +49,7 @@
                 </p>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
             {% for book in books %}
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <div class="card h-100 border-0">
