--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -143,7 +143,7 @@
                     </ul>
                 </div>
             {% endif %}
-            <button type="submit" class="btn btn-primary mt-3">Submit</button>
+            <button type="submit" class="btn btn-primary mt-3 mb-5">Submit</button>
         </form>
     {% else %}
         <p class="mt-4">You need to <a href="{% url 'account_login' %}">log in</a> to leave a review.</p>
