--- a/books/templates/books/clearance_books.html
+++ b/books/templates/books/clearance_books.html
@@ -13,7 +13,7 @@
 <div class="container-fluid">
     <div class="container text-center">
         <hr>
-        <h1>Clearance Books</h1>
+        <h1 class="mb-5">Clearance Books</h1>
         <hr>
         <div class="row">
             {% for book in books %}
