--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -84,7 +84,7 @@
         </div>
         <div class="row mt-5">
             <div class="col text-center">
-                <a href="{% url 'view_wishlist' %}" class="btn btn-primary">View My Wishlist</a>
+                <a href="{% url 'view_wishlist' %}" class="btn btn-primary mb-5">View My Wishlist</a>
             </div>
         </div>
     </div>
