--- a/profiles/templates/profiles/book_management.html
+++ b/profiles/templates/profiles/book_management.html
@@ -47,7 +47,7 @@
                     Add Book
                 </div>
             </a>
-            <p class="mt-2"> Add new Book</p>
+            <p class="mt-2 mb-5"> Add new Book</p>
 
         </div>
     </div>
