--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <h2 class="logo-font mb-5">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
@@ -130,6 +130,26 @@
                 {% endif %}
             </div>
         </div>
+        <!-- Modal -->
+        <div class="modal fade" id="confirmRemoveModal" tabindex="-1" role="dialog" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="confirmRemoveModalLabel">Confirm Removal</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                    Are you sure you want to remove this item from your bag?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-danger" id="confirm-remove-btn">Remove</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
 
@@ -138,24 +158,37 @@
 {% include 'books/includes/quantity_input_script.html' %}
 
 <script type="text/javascript">
+    var itemIdToRemove = null;
+
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
-    })
+    });
 
-    // Remove item and reload on click
+    // Show modal on remove item button click
     $('.remove-item').click(function(e) {
+        e.preventDefault(); // Prevent default action
+        itemIdToRemove = $(this).attr('id').split('remove_')[1];
+        $('#confirmRemoveModal').modal('show');
+    });
+
+    // Confirm removal
+    $('#confirm-remove-btn').click(function() {
         var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}/`;
+        var size = $('.remove-item[data-id="' + itemIdToRemove + '"]').data('size');
+        var url = `/bag/remove/${itemIdToRemove}/`;
         var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
 
         $.post(url, data)
          .done(function() {
              location.reload();
+         })
+         .fail(function() {
+             alert('Error removing item');
          });
-    })
+        
+        $('#confirmRemoveModal').modal('hide');
+    });
 </script>
 {% endblock %}
