--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -15,8 +15,8 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mt-5 mb-4">Book Management</h2>
-                <h3 class="text-muted">Add a Book</h3>
+                <h2 class="logo-font mt-5 text-center mb-4">Book Management</h2>
+                <h3 class="text-muted mb-5">Add a Book</h3>
                 <hr>                
             </div>
         </div>
