Edit social media links to open in new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,10 +151,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="https://www.instagram.com" class="text-white mx-2" aria-label="Instagram">
+                        <p class="footer-text">CookBookNook 2024</p>
+                        <a href="https://www.instagram.com" class="text-white mx-2" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram fa-lg"></i>
                         </a>
-                        <a href="https://www.facebook.com" class="text-white mx-2" aria-label="Facebook">
+                        <a href="https://www.facebook.com" class="text-white mx-2" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook fa-lg"></i>
                         </a>
                     </div>
