--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,7 @@
                     {% endwith %}
                 {% endfor %}
             </div>
+    </div>
         {% endif %}
 
         {% block page_header %}
@@ -147,8 +148,9 @@
             {% endblock %}
         </main>
 
+        <div class="empty"> </div>
         <footer class="footer bg-black text-white py-4">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 text-center">
                         <p class="footer-text">CookBookNook 2024</p>
@@ -162,7 +164,6 @@
                 </div>
             </div>
         </footer>
-    </div>
 
     {% block postloadjs %}
     <script type="text/javascript">
