--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -35,101 +35,90 @@
                                     <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
-
-                            {% for item in bag_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
-                                        <a href="{% url 'book_detail' item.book.id %}">
-                                            {% if item.book.image %}
-                                                <img class="img-fluid rounded" src="{{ item.book.image.url }}" alt="{{ item.book.title }}">
-                                            {% else %}
-                                                <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.book.title }}">
-                                            {% endif %}
-                                        </a>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.book.title }}</strong></p>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">£{{ item.book.price }}</p>
-                                    </td>
-                                    <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.book.id %}">
-                                            {% csrf_token %}
-                                            <div class="form-group">
-                                                <div class="input-group">
-                                                    <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                            data-item_id="{{ item.book.id }}" id="decrement-qty_{{ item.book.id }}">
-                                                            <span>
-                                                                <i class="fas fa-minus fa-sm"></i>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    <input class="form-control form-control-sm qty_input" type="number"
-                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.book.id }}"
-                                                        id="id_qty_{{ item.book.id }}">
-                                                    <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                            data-item_id="{{ item.book.id }}" id="increment-qty_{{ item.book.id }}">
-                                                            <span>
-                                                                <i class="fas fa-plus fa-sm"></i>
-                                                            </span>
-                                                        </button>
+                            <tbody>
+                                {% for item in bag_items %}
+                                    <tr>
+                                        <td class="p-3 w-25">
+                                            <a href="{% url 'book_detail' item.book.id %}">
+                                                {% if item.book.image %}
+                                                    <img class="img-fluid rounded" src="{{ item.book.image.url }}" alt="{{ item.book.title }}">
+                                                {% else %}
+                                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.book.title }}">
+                                                {% endif %}
+                                            </a>
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0"><strong>{{ item.book.title }}</strong></p>
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0">£{{ item.book.price }}</p>
+                                        </td>
+                                        <td class="py-3 w-25">
+                                            <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.book.id %}">
+                                                {% csrf_token %}
+                                                <div class="form-group">
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <button class="decrement-qty btn btn-sm btn-black rounded-0" data-item_id="{{ item.book.id }}" id="decrement-qty_{{ item.book.id }}">
+                                                                <span><i class="fas fa-minus fa-sm"></i></span>
+                                                            </button>
+                                                        </div>
+                                                        <input class="form-control form-control-sm qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.book.id }}" id="id_qty_{{ item.book.id }}">
+                                                        <div class="input-group-append">
+                                                            <button class="increment-qty btn btn-sm btn-black rounded-0" data-item_id="{{ item.book.id }}" id="increment-qty_{{ item.book.id }}">
+                                                                <span><i class="fas fa-plus fa-sm"></i></span>
+                                                            </button>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </form>
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.book.id }}" data-size="{{ item.size }}"><small>Remove</small></a>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">£{{ item.book.price|calc_subtotal:item.quantity }}</p>
+                                            </form>
+                                            <a class="update-link text-info"><small>Update</small></a>
+                                            <a class="remove-item text-danger float-right" id="remove_{{ item.book.id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                                        </td>
+                                        <td class="py-3">
+                                            <p class="my-0">£{{ item.book.price|calc_subtotal:item.quantity }}</p>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="5" class="pt-5 text-right">
+                                        <h6><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
+                                        <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                        <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                        {% if free_delivery_delta > 0 %}
+                                            <p class="mb-1 text-danger">
+                                                You could get free delivery by spending just <strong>£{{ free_delivery_delta|floatformat:2 }}</strong> more!
+                                            </p>
+                                        {% endif %}
                                     </td>
                                 </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="5" class="pt-5 text-right">
-                                    <h6><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
-                                    {% if free_delivery_delta > 0 %}
-                                        <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>£{{ free_delivery_delta|floatformat:2 }}</strong> more!
-                                        </p>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                        <span class="text-uppercase">Secure Checkout</span>
-                                        <span class="icon">
-                                            <i class="fas fa-lock"></i>
-                                        </span>
-                                    </a>
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td colspan="5" class="text-right">
+                                        <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                            <span class="icon"><i class="fas fa-chevron-left"></i></span>
+                                            <span class="text-uppercase">Keep Shopping</span>
+                                        </a>
+                                        <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                            <span class="text-uppercase">Secure Checkout</span>
+                                            <span class="icon"><i class="fas fa-lock"></i></span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
                 {% else %}
                     <p class="lead mb-5">Your bag is empty.</p>
                     <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 btn-lg mb-5">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
+                        <span class="icon"><i class="fas fa-chevron-left"></i></span>
                         <span class="text-uppercase">Keep Shopping</span>
                     </a>
                 {% endif %}
             </div>
         </div>
+        
         <!-- Modal -->
         <div class="modal fade" id="confirmRemoveModal" tabindex="-1" role="dialog" aria-labelledby="confirmRemoveModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -137,11 +126,11 @@
                     <div class="modal-header">
                         <h5 class="modal-title" id="confirmRemoveModalLabel">Confirm Removal</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                           <span aria-hidden="true">&times;</span>
+                            <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                    Are you sure you want to remove this item from your bag?
+                        Are you sure you want to remove this item from your bag?
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -154,41 +143,41 @@
 {% endblock %}
 
 {% block postloadjs %}
-{{ block.super }}
-{% include 'books/includes/quantity_input_script.html' %}
+    {{ block.super }}
+    {% include 'books/includes/quantity_input_script.html' %}
+    
+    <script type="text/javascript">
+        var itemIdToRemove = null;
 
-<script type="text/javascript">
-    var itemIdToRemove = null;
+        // Update quantity on click
+        $('.update-link').click(function(e) {
+            var form = $(this).prev('.update-form');
+            form.submit();
+        });
 
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
-        form.submit();
-    });
+        // Show modal on remove item button click
+        $('.remove-item').click(function(e) {
+            e.preventDefault(); // Prevent default action
+            itemIdToRemove = $(this).attr('id').split('remove_')[1];
+            $('#confirmRemoveModal').modal('show');
+        });
 
-    // Show modal on remove item button click
-    $('.remove-item').click(function(e) {
-        e.preventDefault(); // Prevent default action
-        itemIdToRemove = $(this).attr('id').split('remove_')[1];
-        $('#confirmRemoveModal').modal('show');
-    });
+        // Confirm removal
+        $('#confirm-remove-btn').click(function() {
+            var csrfToken = "{{ csrf_token }}";
+            var size = $('.remove-item[data-id="' + itemIdToRemove + '"]').data('size');
+            var url = `/bag/remove/${itemIdToRemove}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
 
-    // Confirm removal
-    $('#confirm-remove-btn').click(function() {
-        var csrfToken = "{{ csrf_token }}";
-        var size = $('.remove-item[data-id="' + itemIdToRemove + '"]').data('size');
-        var url = `/bag/remove/${itemIdToRemove}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-         })
-         .fail(function() {
-             alert('Error removing item');
-         });
-        
-        $('#confirmRemoveModal').modal('hide');
-    });
-</script>
+            $.post(url, data)
+                .done(function() {
+                    location.reload();
+                })
+                .fail(function() {
+                    alert('Error removing item');
+                });
+            
+            $('#confirmRemoveModal').modal('hide');
+        });
+    </script>
 {% endblock %}
