--- a/books/templates/books/add_category.html
+++ b/books/templates/books/add_category.html
@@ -50,9 +50,12 @@
                             <td>{{ category.friendly_name }}</td>
                             <td>
                                 <div class="btn logo-font d-inline">
-                                    <a href="{% url 'edit_category' category.id %}" class="text-success"><i class="fas fa-edit"></i> Edit</a>
-                                    <button class="btn logo-font text-danger" data-toggle="modal"
-                                    data-target="#deleteModal{{ category.id }}"><i class="fas fa-trash-alt"></i> Delete</button>
+                                    <a href="{% url 'edit_category' category.id %}" class="text-success">
+                                        <i class="fas fa-edit"></i> Edit
+                                    </a>
+                                    <button class="btn logo-font text-danger" data-toggle="modal" data-target="#deleteModal{{ category.id }}">
+                                        <i class="fas fa-trash-alt"></i> Delete
+                                    </button>
                                 </div>
                                 <!-- Modal -->
                                 {% include 'books/includes/delete_category_modal.html' %}
