--- a/books/templates/books/includes/delete_category_modal.html
+++ b/books/templates/books/includes/delete_category_modal.html
@@ -1,5 +1,5 @@
-<!-- Model -->
-<div id="deleteModal{{category.id}}" class="modal" tabindex="-1" data-keyboard="false" data-backdrop="static">
+<!-- Modal -->
+<div id="deleteModal{{ category.id }}" class="modal" tabindex="-1" data-keyboard="false" data-backdrop="static">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content text-center">
             <div class="modal-header logo-font">
@@ -9,8 +9,10 @@
                 </button>
             </div>
             <div class="modal-body-delete">
-                <h4 class="mt-4">Are you sure you want to delete <br> <strong>{{category.name }}</strong>
-                    category?
+                <h4 class="mt-4">
+                    Are you sure you want to delete
+                    <br>
+                    <strong>{{ category.name }}</strong> category?
                 </h4>
                 <p class="text-danger mt-3">This action cannot be undone!</p>
             </div>
@@ -21,4 +23,4 @@
         </div>
     </div>
 </div>
-<!-- End of Model -->
+<!-- End of Modal -->
