--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,7 +21,10 @@
                 <hr>
                 <h2 class="logo-font text-center mb-5">Thank You</h2>
                 <hr>
-                <p class="text-black">Your order information is shown below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">
+                    Your order information is shown below. A confirmation email will be sent to 
+                    <strong>{{ order.email }}</strong>.
+                </p>
             </div>
         </div>
 
@@ -59,16 +62,16 @@
                     </div>
 
                     {% for item in order.lineitems.all %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="small mb-0 text-black font-weight-bold">
-                                {{ item.book.title }} ({{ item.book.get_format_display }})
-                            </p>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="small mb-0 text-black font-weight-bold">
+                                    {{ item.book.title }} ({{ item.book.get_format_display }})
+                                </p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="small mb-0">{{ item.quantity }} @ £{{ item.book.price }} each</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ £{{ item.book.price }} each</p>
-                        </div>
-                    </div>
                     {% endfor %}
 
                     <div class="row">
@@ -96,25 +99,25 @@
                     </div>
 
                     {% if order.street_address2 %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Address 2</p>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">Address 2</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.street_address2 }}</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.street_address2 }}</p>
-                        </div>
-                    </div>
                     {% endif %}
 
                     {% if order.county %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">County</p>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">County</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.county }}</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.county }}</p>
-                        </div>
-                    </div>
                     {% endif %}
 
                     <div class="row">
@@ -127,14 +130,14 @@
                     </div>
 
                     {% if order.postcode %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Postal Code</p>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">Postal Code</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.postcode }}</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.postcode }}</p>
-                        </div>
-                    </div>
                     {% endif %}
 
                     <div class="row">
@@ -189,13 +192,14 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-12 col-lg-7 text-right">
                     {% if from_profile %}
                         <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2 mb-5">
                             <span class="icon mr-2">
                                 <i class="fas fa-angle-left"></i>
-                         </span>
+                            </span>
                             <span class="text-uppercase">Back to Profile</span>
                         </a>
                     {% else %}
