Beautify code and add margins to btns

--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'book_management' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Book</button>
+                        <a class="btn btn-outline-black rounded-0 mb-5" href="{% url 'book_management' %}">Cancel</a>
+                        <button class="btn btn-black rounded-0 mb-5" type="submit">Add Book</button>
                     </div>
                 </form>
             </div>            
