--- a/templates/404.html
+++ b/templates/404.html
@@ -10,19 +10,23 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col text-center my-auto">
-            <h1>404 - Page Not Found</h1>
-            <p>Sorry, the page you are looking for does not exist.</p>
-            <p><a href="{% url 'home' %}">Go back to the homepage</a></p>
+    <div class="overlay"></div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col"></div>
         </div>
     </div>
-</div>
+
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col text-center my-auto">
+                <h1 mt-5>404 - Page Not Found</h1>
+                <p>Sorry, the page you are looking for does not exist.</p>
+                <p>
+                    <a href="{% url 'home' %}">Go back to the homepage</a>
+                </p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
